--- a/package.json
+++ b/package.json
@@ -31,16 +31,25 @@
     "isomorphic-fetch": "^2.1.1",
     "react": "^0.13.3",
     "react-redux": "^0.9.0",
+    "react-router": "1.0.0-beta3",
     "redux": "^1.0.1"
   },
   "devDependencies": {
     "babel": "^5.8.21",
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
+    "css-loader": "^0.17.0",
+    "debug": "^2.2.0",
+    "expect": "^1.9.0",
+    "fetch-mock": "^1.5.2",
+    "file-loader": "^0.8.4",
     "jsdom": "<4.0.0",
     "mocha": "^2.2.5",
     "mocha-jsdom": "^1.0.0",
+    "node-fetch": "^1.3.2",
     "react-hot-loader": "^1.2.8",
+    "sinon": "^1.16.1",
+    "style-loader": "^0.12.3",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1"
   }
