--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
   "dependencies": {
     "es6-promise": "^3.0.2",
     "isomorphic-fetch": "^2.1.1",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.1",
+    "normalize.css": "^3.0.3",
     "react": "^0.13.3",
+    "react-json-inspector": "^5.2.1",
     "react-redux": "^0.9.0",
     "react-router": "1.0.0-beta3",
     "redux": "^1.0.1"
